Fix: AI Context (Multi-Goal + Time Boxing) - V2.7

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <div id="root"></div>
   <div id="deployment-check"
-    style="position:fixed;top:0;right:0;background:red;color:white;z-index:999999;padding:4px;font-weight:bold;">V2.6
-    LIVE - UX POLISH</div>
+    style="position:fixed;top:0;right:0;background:red;color:white;z-index:999999;padding:4px;font-weight:bold;">V2.7
+    AI CONTEXT</div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
