--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <div id="root"></div>
   <div id="deployment-check"
-    style="position:fixed;top:0;right:0;background:red;color:white;z-index:999999;padding:4px;font-weight:bold;">V2.9
-    TASK CONTEXT</div>
+    style="position:fixed;top:0;right:0;background:red;color:white;z-index:999999;padding:4px;font-weight:bold;">V3.0
+    SMART ROUTING</div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
